--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,4 +7,5 @@
     "vs-kubernetes": {
         "vs-kubernetes.kubeconfig": "./vagrant/vagrant_kube_admin.conf"
     },
+    "python.linting.pylintEnabled": true,
 }
