--- a/ansible/roles/kubernetes-apps/tasks/apps/logging-elasticsearch.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/logging-elasticsearch.yml
@@ -1,11 +1,79 @@
 ---
 
+- name: Ensure directory exists for local self-signed TLS certs
+  file:
+    path: "{{ custom_ssl_certs_root_dir }}/elasticsearch"
+    state: directory
+
+- name: Generate an OpenSSL CA private key
+  openssl_privatekey:
+    path: "{{ custom_ssl_certs_root_dir }}/elasticsearch/ca.key"
+
+- name: Generate an OpenSSL CA CSR
+  openssl_csr:
+    path: "{{ custom_ssl_certs_root_dir }}/elasticsearch/ca.csr"
+    privatekey_path: "{{ custom_ssl_certs_root_dir }}/elasticsearch/ca.key"
+    common_name: "{{ web_base_domain }}"
+    basicConstraints:
+      - CA:TRUE
+
+- name: Generate a Self Signed OpenSSL CA certificate
+  openssl_certificate:
+    path: "{{ custom_ssl_certs_root_dir }}/elasticsearch/ca.crt"
+    privatekey_path: "{{ custom_ssl_certs_root_dir }}/elasticsearch/ca.key"
+    csr_path: "{{ custom_ssl_certs_root_dir }}/elasticsearch/ca.csr"
+    provider: selfsigned
+
+- name: Generate an OpenSSL server private key
+  openssl_privatekey:
+    path: "{{ custom_ssl_certs_root_dir }}/elasticsearch/es-node.key"
+
+- name: Generate an OpenSSL server CSR
+  openssl_csr:
+    path: "{{ custom_ssl_certs_root_dir }}/elasticsearch/es-node.csr"
+    privatekey_path: "{{ custom_ssl_certs_root_dir }}/elasticsearch/es-node.key"
+    common_name: "elasticsearch"
+
+- name: Generate a CA Signed OpenSSL server certificate
+  openssl_certificate:
+    path: "{{ custom_ssl_certs_root_dir }}/elasticsearch/es-node.crt"
+    privatekey_path: "{{ custom_ssl_certs_root_dir }}/elasticsearch/es-node.key"
+    csr_path: "{{ custom_ssl_certs_root_dir }}/elasticsearch/es-node.csr"
+    ownca_path: "{{ custom_ssl_certs_root_dir }}/elasticsearch/ca.crt"
+    ownca_privatekey_path: "{{ custom_ssl_certs_root_dir }}/elasticsearch/ca.key"
+    provider: ownca
+
+- name: Read generated files
+  slurp:
+    src: "{{ item }}"
+  register: elasticsearch_generated_certificate_files
+  with_items: 
+    - "{{ custom_ssl_certs_root_dir }}/elasticsearch/ca.crt"
+    - "{{ custom_ssl_certs_root_dir }}/elasticsearch/es-node.crt"
+    - "{{ custom_ssl_certs_root_dir }}/elasticsearch/es-node.key"
+
+- name: List included security config files
+  set_fact:
+    elasticsearch_security_config_files: "{{ elasticsearch_security_config_files | default([]) + [ item ] }}"
+  with_fileglob:
+    - "{{ kubernetes_app_root_path }}/logging/elasticsearch/config/security/*.yml*"
+
 - name: Deploy ElasticSearch
   k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
     state: present
   with_fileglob:
     - "{{ kubernetes_app_root_path }}/logging/elasticsearch/deploy/*.yaml*"
+  become: yes
+  become_user: "{{ kubernetes_user.name }}"
+
+- name: Expose ElasticSearch in allowed namespaces
+  k8s:
+    definition: "{{ lookup(item.0 | regex_search('.j2$') | ternary('template','file'), item.0) }}"
+    state: present
+  with_nested:
+    - "{{ lookup('fileglob', kubernetes_app_root_path + '/logging/elasticsearch/deploy/exposed/*.yaml*').split(',') }}"
+    - "{{ elasticsearch_exposed_namespaces }}"
   become: yes
   become_user: "{{ kubernetes_user.name }}"
 
