--- a/ansible/roles/kubernetes-apps/tasks/apps/logging-kibana.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/logging-kibana.yml
@@ -30,6 +30,8 @@
     method: GET
     return_content: no
     validate_certs: "{{ logging_kibana_valid_certs }}"
+    user: "{{ logging_kibana_elasticsearch_user }}"
+    password: "{{ logging_kibana_elasticsearch_password }}"
   register: kibana_available
   until:
   - kibana_available.status == 200
@@ -38,27 +40,31 @@
 
 - name: List Kibana saved objects
   set_fact:
-    kibana_config_files: "{{ kibana_config_files | default([]) + [ item ] }}"
+    kibana_config_saved_objects_files: "{{ kibana_config_saved_objects_files | default([]) + [ item ] }}"
   with_fileglob:
-    - "{{ kubernetes_app_root_path }}/logging/kibana/config/*.json*"
+    - "{{ kubernetes_app_root_path }}/logging/kibana/config/saved_objects/*.json*"
 
 - name: Read Kibana saved objects
   set_fact:
     kibana_config_contents: "{{ kibana_config_contents | default([]) + [ (lookup(item | regex_search('.j2$') | ternary('template','file'), item) | from_json) ] }}"
-  with_items: "{{ kibana_config_files }}"
+  with_items: "{{ kibana_config_saved_objects_files }}"
 
 - name: Check if objects already exist
   uri:
     url: "{{ logging_kibana_internal_url }}/api/saved_objects/{{ item.1.type }}/{{ item.1.id }}"
     method: GET
     return_content: yes
+    follow_redirects: false
     status_code:
       - 200
       - 404
     validate_certs: "{{ logging_kibana_valid_certs }}"
+    force_basic_auth: true
+    user: "{{ logging_kibana_elasticsearch_user }}"
+    password: "{{ logging_kibana_elasticsearch_password }}"
   register: existing_kibana_saved_objects
   with_together: 
-    - "{{ kibana_config_files }}"
+    - "{{ kibana_config_saved_objects_files }}"
     - "{{ kibana_config_contents }}"
   loop_control:
     label: "{{ item.0 }} -> {{ item.1.id }}"
@@ -67,14 +73,18 @@
   uri:
     url: "{{ logging_kibana_internal_url }}/api/saved_objects/{{ item.1.type }}/{{ item.1.id }}"
     method: POST
+    follow_redirects: false
     body: 
       attributes: "{{ item.1.attributes }}"
     body_format: json
     headers:
       kbn-xsrf: kbn-xsrf
     validate_certs: "{{ logging_kibana_valid_certs }}"
+    force_basic_auth: true
+    user: "{{ logging_kibana_elasticsearch_user }}"
+    password: "{{ logging_kibana_elasticsearch_password }}"
   with_together: 
-    - "{{ kibana_config_files }}"
+    - "{{ kibana_config_saved_objects_files }}"
     - "{{ kibana_config_contents }}"
     - "{{ existing_kibana_saved_objects.results }}"
   loop_control:
@@ -86,14 +96,18 @@
   uri:
     url: "{{ logging_kibana_internal_url }}/api/saved_objects/{{ item.1.type }}/{{ item.1.id }}"
     method: PUT
+    follow_redirects: false
     body: 
       attributes: "{{ item.1.attributes }}"
     body_format: json
     headers:
       kbn-xsrf: kbn-xsrf
     validate_certs: "{{ logging_kibana_valid_certs }}"
+    force_basic_auth: true
+    user: "{{ logging_kibana_elasticsearch_user }}"
+    password: "{{ logging_kibana_elasticsearch_password }}"
   with_together: 
-    - "{{ kibana_config_files }}"
+    - "{{ kibana_config_saved_objects_files }}"
     - "{{ kibana_config_contents }}"
     - "{{ existing_kibana_saved_objects.results }}"
   loop_control:
