Reconfigure Elasticsearch security when a configuration is changed

--- a/ansible/roles/kubernetes-apps/tasks/apps/logging-elasticsearch.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/logging-elasticsearch.yml
@@ -62,6 +62,7 @@
   k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
     state: present
+  register: elasticsearch_deployment
   with_fileglob:
     - "{{ kubernetes_app_root_path }}/logging/elasticsearch/deploy/*.yaml*"
   become: yes
@@ -85,3 +86,33 @@
     - "{{ kubernetes_app_root_path }}/logging/elasticsearch/deploy/prometheus_exporter/*.yaml*"
   become: yes
   become_user: "{{ kubernetes_user.name }}"
+
+- name: Wait for EasticSearch to be available
+  uri:
+    url: "{{ logging_elasticsearch_internal_url }}/_cluster/state?pretty"
+    method: GET
+    return_content: no
+#    validate_certs: "{{ logging_kibana_valid_certs }}"
+    user: "{{ logging_elasticsearch_exporter_user }}"
+    password: "{{ logging_elasticsearch_exporter_password }}"
+  register: elasticsearch_available
+  until:
+  - elasticsearch_available.status == 200
+  retries: 18
+  delay: 10
+  when: elasticsearch_deployment.changed
+
+# Security configuration changes are only taken into account the first time ES is deployed, or after running securityadmin.sh
+# The following tasks ensures that each time something changes in ES deployment, security configurations are properly updated.
+- name: Reconfigure security
+  command:
+    kubectl --namespace=logging exec -it elasticsearch-0 -- \
+      bash /usr/share/elasticsearch/plugins/opendistro_security/tools/securityadmin.sh \
+      -icl -nhnv \
+      -cd /usr/share/elasticsearch/plugins/opendistro_security/securityconfig/ \
+      -cacert /usr/share/elasticsearch/config/certs/ca.crt \
+      -cert /usr/share/elasticsearch/config/certs/es-node.crt \
+      -key /usr/share/elasticsearch/config/certs/es-node.key
+  become: yes
+  become_user: "{{ kubernetes_user.name }}"
+  when: elasticsearch_deployment.changed
