Update vagrant Debian box to Buster

--- a/vagrant/Vagrantconfig.yaml
+++ b/vagrant/Vagrantconfig.yaml
@@ -1,8 +1,9 @@
 ---
 
 common:
-  box_name: debian/contrib-stretch64
-  # Name of the sata controller to add the DATA disk.
+  # TODO : switch to debian/contrib-buster64 once it's released
+  box_name: debian/contrib-testing64
+  # Name of the storage controller to add the DATA disk.
   # To find the exact name, start the box a first time and look at the storage settings in VirtualBox
   sata_controller_name: 'SATA Controller'
   network_cidr: 192.168.100.0/24
