--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -7,7 +7,7 @@
 - name: Add Docker repo
   apt_repository:
     filename: "docker"
-    repo: "deb [arch=amd64] https://download.docker.com/linux/debian stretch stable"
+    repo: "deb [arch=amd64] https://download.docker.com/linux/debian {{ ansible_lsb.codename }} stable"
     state: present
 
 - name: Install DockerCE
