Clean linter warnings

--- a/ansible/roles/kubernetes-apps/tasks/apps/auth-lemonldap.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/auth-lemonldap.yml
@@ -8,6 +8,7 @@
   git:
     dest: /tmp/lemonldap-ng-docker
     repo: https://github.com/Neraud/lemonldap-ng-docker
+    version: master
 
 - name: Build and push LemonLDAP image
   docker_image:
