--- a/ansible/roles/kubernetes-apps/tasks/main.yml
+++ b/ansible/roles/kubernetes-apps/tasks/main.yml
@@ -9,6 +9,9 @@
 - import_tasks: apps/infra-registry.yml
   tags: kubernetes-app-infra-registry
 
+- import_tasks: apps/infra-mailhog.yml
+  tags: kubernetes-app-infra-mailhog
+
 - import_tasks: apps/infra-unifi.yml
   tags: kubernetes-app-infra-unifi
 
