--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -90,7 +90,14 @@ lemonldap_location_rules:
 
 
 mailhog_exposed_smtp: mailhog.default:1025
-
+mailhog_forward_smtp_enabled: false
+#mailhog_forward_smtp_name: "TODO"
+#mailhog_forward_smtp_host: "..."
+#mailhog_forward_smtp_port: "587"
+#mailhog_forward_smtp_email: "..."
+#mailhog_forward_smtp_username: "..."
+#mailhog_forward_smtp_password: "..."
+#mailhog_forward_smtp_mechanism: "PLAIN"
 
 ttrss_context_root: /
 ttrss_pqsql_user: ttrss
