--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -89,7 +89,23 @@ lemonldap_location_rules:
     default_rule: accept
 
 
-mailhog_exposed_smtp: mailhog.default:1025
+zonemta_smtp_servername: zonemta.default
+zonemta_mongo_root_user: root
+zonemta_mongo_root_password: clear_password
+zonemta_mongo_user: zonemta
+zonemta_mongo_database: zonemta
+zonemta_mongo_password: clear_password
+zonemta_redis_password: clear_password
+# Forward to Mailhog by default
+zonemta_forward_mta_host: mailhog.default.svc.cluster.local
+zonemta_forward_mta_port: 1025
+zonemta_forward_mta_auth_enabled: false
+#zonemta_forward_mta_user: user
+#zonemta_forward_mta_password: password
+
+
+
+mailhog_exposed_smtp: mailhog.default.svc.cluster.local:1025
 mailhog_forward_smtp_enabled: false
 #mailhog_forward_smtp_name: "TODO"
 #mailhog_forward_smtp_host: "..."
