--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -90,6 +90,9 @@ lemonldap_location_rules:
 
 
 zonemta_smtp_servername: zonemta.default
+zonemta_feeder_authentication_enabled: true
+zonemta_feeder_authentication_username: smtp
+zonemta_feeder_authentication_password: clear_password
 zonemta_mongo_root_user: root
 zonemta_mongo_root_password: clear_password
 zonemta_mongo_user: zonemta
