--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -205,19 +205,20 @@ gitlab_time_zone: "{{ time_zone }}"
 gitlab_backup_keep_time: "604800"
 
 # Email configuration.
-gitlab_email_enabled: "false"
-gitlab_email_from: "gitlab@example.com"
+gitlab_email_enabled: "true"
+gitlab_email_from: "gitlab@{{ web_base_domain }}"
 gitlab_email_display_name: "Gitlab"
-gitlab_email_reply_to: "gitlab@example.com"
-gitlab_smtp_enable: "false"
-gitlab_smtp_address: "smtp.server"
-gitlab_smtp_port: 456
-#gitlab_smtp_authentication: "login"
-#gitlab_smtp_user_name: "smtp user"
-#gitlab_smtp_password: "smtp password"
+gitlab_email_reply_to: "gitlab{{ web_base_domain }}"
+gitlab_email_subject_suffix: "[Gitlab] "
+gitlab_smtp_enable: "true"
+gitlab_smtp_address: "{{ zonemta_smtp_servername }}"
+gitlab_smtp_port: 587
+gitlab_smtp_authentication: "login"
+gitlab_smtp_user_name: "{{ zonemta_feeder_authentication_username }}"
+gitlab_smtp_password: "{{ zonemta_feeder_authentication_password }}"
 #gitlab_smtp_domain: "example.com"
 gitlab_smtp_enable_starttls_auto: "true"
-#gitlab_smtp_tls: "true"
+gitlab_smtp_tls: "false"
 #gitlab_smtp_openssl_verify_mode: 'peer'
 gitlab_ldap_servername: "{{ openldap_ldap_servername }}"
 
