--- a/ansible/roles/kubernetes-apps/tasks/apps/infra-zonemta.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/infra-zonemta.yml
@@ -76,3 +76,13 @@
     - "{{ kubernetes_app_root_path }}/infra/zone-mta/deploy/*.yaml*"
   become: yes
   become_user: "{{ kubernetes_user.name }}"
+
+- name: Expose ZoneMTA in allowed namespaces
+  k8s:
+    definition: "{{ lookup(item.0 | regex_search('.j2$') | ternary('template','file'), item.0) }}"
+    state: present
+  with_nested:
+    - "{{ lookup('fileglob', kubernetes_app_root_path + '/infra/zone-mta/deploy/exposed/*.yaml*').split(',') }}"
+    - "{{ zonemta_exposed_namespaces }}"
+  become: yes
+  become_user: "{{ kubernetes_user.name }}"
