Enable TLS for Mosquitto (partially) It works inside the cluster (with HomeAssistant for example), but not with the NGinx Ingress

--- a/apps/home/mosquitto/deploy/service.yaml
+++ b/apps/home/mosquitto/deploy/service.yaml
@@ -8,6 +8,9 @@ metadata:
 spec:
   ports:
   - port: 1883
+    name: mqtt
+  - port: 8883
+    name: mqtts
   selector:
     app: mosquitto
     app-component: mosquitto
