--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -163,12 +163,23 @@ mosquitto_listeners:
   - port: 1883
     secure: False
     websocket: False
+    
+#  - port: 8883
+#    secure: True
+#    websocket: False
+#    cert_cn: listener_cname
+
+#  - port: 8083
+#    websocket: True
 
 # password generated with mosquitto_passwd
-mosquitto_credientials: 
+#mosquitto_credientials: 
 #  credentials:
 #      user / Passw0rd
-    - user:$6$iHdTqa9599orI9G2$/MPMDSugrFk98BUPguy/ap7gVStgB3sUYS1pQTdWcT6CFNz+8DcbMfL0pyiUpEjTpTHufPzbxAUXSzOYybiDgg==
+#    - user:$6$iHdTqa9599orI9G2$/MPMDSugrFk98BUPguy/ap7gVStgB3sUYS1pQTdWcT6CFNz+8DcbMfL0pyiUpEjTpTHufPzbxAUXSzOYybiDgg==
+
+mosquitto_exposed_namespaces:
+  - default
 
 # Cf https://github.com/mKeRix/room-assistant/wiki/Configuration
 roomassistant_environment_variables:
