Add new openssl-pki role

--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -19,6 +19,10 @@
   hosts: kubernetes_masters
   roles:
     - {
+        role: openssl-pki,
+        tags: openssl-pki
+      }
+    - {
         role: nginx,
         tags: nginx
       }
