--- a/ansible/roles/openssl-pki/tasks/main.yml
+++ b/ansible/roles/openssl-pki/tasks/main.yml
@@ -79,3 +79,14 @@
     - certs
   loop_control:
     label: "{{ item.0.pki_name }} : {{ item.1.name }}"
+
+- name: Generate DH Parameters
+  openssl_dhparam:
+    path: "{{ custom_ssl_pki_root_dir }}/{{ item.0.pki_name }}/{{ item.1.name }}/dhparam.pem"
+    size: "{{ item.1.generate_dh_param_size | default(2048) }}"
+  with_subelements:
+    - "{{ openssl_custom_pki }}"
+    - certs
+  when: item.1.generate_dh_param_enabled | default(false)
+  loop_control:
+    label: "{{ item.0.pki_name }} : {{ item.1.name }}"
