Init the cluster PKI and expose the CA in a Secret

--- a/ansible/roles/kubernetes-infra/defaults/main.yml
+++ b/ansible/roles/kubernetes-infra/defaults/main.yml
@@ -23,3 +23,9 @@ kubernetes_extra_namespaces:
   - ingress-nginx
   - monitoring
   - logging
+
+kubernetes_cluster_ca_namespaces:
+  - default
+  - ingress-nginx
+  - monitoring
+  - logging
