Create certificates for NGinx Ingress

--- a/ansible/roles/kubernetes-infra/defaults/main.yml
+++ b/ansible/roles/kubernetes-infra/defaults/main.yml
@@ -29,3 +29,8 @@ kubernetes_cluster_ca_namespaces:
   - ingress-nginx
   - monitoring
   - logging
+
+kubernetes_ingress_tls_secret_namespaces:
+  - default
+  - monitoring
+  - logging
