Migrate Elasticsearch rest calls to HTTPS

--- a/ansible/roles/kubernetes-apps/handlers/apps/logging-elasticsearch.yml
+++ b/ansible/roles/kubernetes-apps/handlers/apps/logging-elasticsearch.yml
@@ -2,9 +2,12 @@
 
 - name: Wait for EasticSearch to be available
   uri:
-    url: "{{ logging_elasticsearch_internal_url }}/_cluster/state?pretty"
+    url: "https://127.0.0.1:{{ kubernetes_ingress_https_port }}/elasticsearch/_cluster/state?pretty"
     method: GET
+    headers:
+      Host: "infra.{{ web_base_domain }}"
     return_content: no
+    validate_certs: no
     user: "{{ logging_elasticsearch_exporter_user }}"
     password: "{{ logging_elasticsearch_exporter_password }}"
   register: elasticsearch_available
