--- a/ansible/roles/kubernetes-apps/tasks/apps/web-heimdall.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/web-heimdall.yml
@@ -18,3 +18,24 @@
     - "{{ kubernetes_app_root_path }}/web/heimdall/deploy/*.yaml*"
   become: yes
   become_user: "{{ kubernetes_user.name }}"
+
+- name: Wait for Heimdall to be available
+  uri:
+    url: "https://127.0.0.1:{{ kubernetes_ingress_https_port }}"
+    method: GET
+    headers:
+      Host: "heimdall.{{ web_base_domain }}"
+    return_content: no
+    validate_certs: no
+  register: heimdall_available
+  until:
+  - heimdall_available.status == 200
+  retries: 18
+  delay: 10
+
+- name: Inject applications in Heimdall
+  command: kubectl exec -it heimdall-0 -- php /config/applicationsLoader.php
+  register: heimdall_applications_loader
+  changed_when: "'[changed]' in heimdall_applications_loader.stdout"
+  become: yes
+  become_user: "{{ kubernetes_user.name }}"
