--- a/apps/infra/ingress-nginx/deploy/configMap-config.yaml
+++ b/apps/infra/ingress-nginx/deploy/configMap-config.yaml
@@ -7,6 +7,8 @@ metadata:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
 data:
+  # The 'public' max body size is already handled by the ReverseProxy, so we can set a large limit here
+  proxy-body-size: "250m"
   ssl-redirect: "false"
   hsts: "false"
   use-forwarded-headers: "true"
